Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47271

QProcess doesn't always respect setWorkingDirectory

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.0 RC
    • 4.8.6, 5.5.0
    • Core: I/O
    • None
    • Mac OS X and Linux differ from Windows, inappropriately.
    • db2fc7843c031c450799269ad82f379d358f29a5

    Description

      On both Mac OS X (Mavericks) and Linux (SLF 5.5), if you call QProcess::setWorkingDirectory() with a nonexistent directory name, it happily runs the process in the current working directory of the caller.

      On Windows 7, it issues the error FailedToStart.

      I believe the Windows behavior is correct.

      As a courtesy to developers, it would be best to add a new error, InvalidWorkingDirectory, as we invariably search the program for reasons that it FailedtoStart, when this problem is in the calling code.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            tjrob Tom Roberts
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes